# pymultirun

./: .pre-commit-config.yaml  README.md  pyproject.toml
multirun/: __init__.py  core.py  importer.py  main.py
